# FastCampus_MCP_A2A_Basic

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  code_index.md  docker-compose.yml  pyproject.toml  run_docker.sh
.cursor/rules/: code-index-first.mdc  core-rules.mdc
docker/: Dockerfile.mcp  docker-compose.mcp.yml
docs/: a2a_spec.md  code_index.md  fastmcp-llms-full_2.11.0.txt  fastmcp-llms_2.11.0.txt  lg-deep-research-example.txt  tavily_pyton_docs.md
docs/diagrams/: code_index.md  step1_architecture.md  step1_sequence.md  step1_state.md  step2_architecture.md  step2_sequence.md  step2_state.md  step3_architecture.md  step3_sequence.md  step3_state.md  step4_architecture.md  step4_sequence.md  step4_state.md
examples/: code_index.md  compare_systems.py  deep_research_a2a_client_comparison.py  step1_mcp_langgraph.py  step2_langgraph_a2a_client.py  step3_multiagent_systems.py  step4_hitl_demo.py
reports/: comparison_results_20250809_014158.json
scripts/: code_index.md  run_step3.ps1  run_step3.sh  run_step4.ps1  run_step4.sh
src/FastCampus_MCP_A2A.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/a2a_integration/: a2a_lg_agent_executor.py  a2a_lg_client_utils.py  a2a_lg_embedded_server_manager.py  a2a_lg_utils.py  code_index.md  redis_task_store.py
src/config/: research_config.py
src/hitl/: code_index.md  manager.py  models.py  notifications.py  storage.py  webhook_storage.py
src/hitl_web/: api.py  code_index.md  websocket_handler.py
src/hitl_web/static/: index.html
src/lg_agents/: code_index.md  research_agent.py
src/lg_agents/base/: base_graph_agent.py
src/lg_agents/deep_research/: code_index.md  deep_research_agent.py  deep_research_agent_a2a.py  deep_research_agent_hitl.py  hitl_nodes.py  prompts.py  researcher_agent_a2a.py  researcher_graph.py  supervisor_a2a_graph.py  supervisor_graph.py
src/lg_agents/simple/: simple_lg_agent_with_mcp.py
src/mcp_servers/: base_mcp_server.py  code_index.md
src/mcp_servers/arxiv_search/: server.py
src/mcp_servers/serper_search/: serper_dev_client.py  server.py
src/mcp_servers/tavily_search/: server.py  tavily_search_client.py
src/utils/: http_client.py
steps/: agentic_code_guide.md  code_index.md  hitl_integration_spec.md  step1.md  step2.md  step3.md  step4.md
tests/: __init__.py  code_index.md  debug_message_test.py  integration_test.py  run_tests.py  test_a2a_integration.py  test_a2a_lg_agent_executor_schema.py  test_a2a_lg_integration.py  test_artifact_streaming.sh  test_comprehensive_hitl.py  test_e2e_final_validation.py  test_e2e_step4_playwright.py  test_env_and_streaming.py  test_hitl_approval_flow.py  test_hitl_integration.py  test_integration_steps_1_to_4.py  test_mcp_tools_validation.py  test_quick_check.py  test_reports_saving.py  test_safeeventqueue.py  test_search_a2a.py  test_simple_a2a.py  test_simple_mcp_agent.py  test_simple_streaming.sh  test_streaming_curl.sh
