[project]
name = "FastCampus-MCP-A2A"
version = "0.1.0"
description = "FastCampus Online Lecture - MCP & A2A - Practice1: LangGraph & MCP & A2A"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Hyunjun Jeon", email = "jeonhj920@gmail.com" }
]
dependencies = [
    "a2a-sdk>=0.3.11",
    "fastmcp>=2.13.0.2",
    "langchain>=1.0.5",
    "langchain-google-genai>=3.0.2",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "tavily-python>=0.7.12",
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
    "redis>=7.0.1",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "arxiv>=2.3.0",
    "ipykernel>=7.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a26",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:langgraph.*",
    "ignore::UserWarning:pytest.*",
]
